Fix positioning and dark mode

--- a/panel/styles/models/html.less
+++ b/panel/styles/models/html.less
@@ -1,8 +1,8 @@
 .copybtn {
-  position: absolute;
+  position: sticky;
   display: flex;
-  top: .3em;
-  right: .3em;
+  top: 0;
+  left: 100%;
   width: 1.7em;
   height: 1.7em;
   opacity: 0;
@@ -15,18 +15,17 @@
   border: #1b1f2426 1px solid;
   background-color: #f6f8fa;
   color: #57606a;
-  margin: 1rem 0;
 }
 
-.copybtn:active {
-  background-color: rgb(187, 187, 187)
+.codehilite pre {
+  margin-top: -1.7em;
 }
 
 .copybtn svg {
-    stroke: currentColor;
-    width: 1.5em;
-    height: 1.5em;
-    padding: 0.1em;
+  stroke: currentColor;
+  width: 1.5em;
+  height: 1.5em;
+  padding: 0.1em;
 }
 
 .codehilite:hover .copybtn {
